# TapeSort

./: .env-example  .gitignore  CMakeLists.txt  README.md
lib/: AbstractBuilderHandlersFactory.h  AbstractTape.h  AbstractTapeFactory.h  CMakeLists.txt  Config.h  ConfigBuilderHandlers.h  FileTape.h  FileTapeFactory.h  InMemoryTapeAdapterFactory.h  TapeSorter.h
lib/configs/: Config.h  EnvParser.h
lib/configs/handlers/: AbstactHandler.h  BaseHandler.h  ConfigHandler.h
lib/configs/handlers/Factories/: AbstractBuilderHandlersFactory.h  ConfigBuilderHandlersFactory.h
lib/tapes/: FileTape.h  InMemoryTapeAdapter.h
lib/tapes/factories/: AbstractTapeFactory.h  FileTapeFactory.h  InMemoryTapeAdapterFactory.h
tests/: CMakeLists.txt  FileTapeTests.cpp  SorterTests.cpp
tmp/: TapeFileExample
